# My-Plugin

./: .gitignore  .gitmodules  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/routes/: graph.py  runs.py
apps/api/app/schemas/: graph.py  run.py
apps/api/app/services/: store.py
apps/web/: index.html  package.json
apps/web/src/: App.jsx
apps/worker/: pyproject.toml
apps/worker/worker/: crawler.py  main.py
scripts/: import_my_plugin.sh
