[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-flow-worker"
version = "0.1.0"
description = "Worker scaffold for Appium crawling"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0"
]

[tool.setuptools]
packages = ["worker"]
